--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.72.7",
-    "react-native-bouncy-checkbox": "^3.0.7"
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
